--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react-dom": "^17.0.5",
     "axios": "^0.21.1",
     "dotenv": "^10.0.0",
+    "raw-loader": "^4.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
