--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
 		"removeComments": false,
 		"sourceMap": true,
 		"allowJs": true,
+		"skipLibCheck": true,
 		"jsx": "react",
 		"allowSyntheticDefaultImports": true,
 		"keyofStringsOnly": true,
